[package]
name = "vhost-device-gpu"
version = "0.1.0"
authors = ["Dorinda Bassey <dbassey@redhat.com>", "Matias Ezequiel Vara Larsen <mvaralar@redhat.com>"]
description = "A virtio-sound device using the vhost-user protocol."
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["gpu", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"
publish = false

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.4",  features = ["derive"] }
env_logger = "0.10"
libc = "0.2"
log = "0.4"
rutabaga_gfx = { path = "rutabaga_gfx", features = ["virgl_renderer", "virgl_renderer_next"]}
thiserror = "1.0"
vhost = { version = "0.9", features = ["vhost-user-backend"] }
vhost-user-backend = "0.11"
virtio-bindings = "0.2.2"
virtio-queue = "0.10"
vm-memory = "0.13.1"
vmm-sys-util = "0.11"
zerocopy = "0.6.3"
zerocopy-derive = "0.6.3"

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { version = "0.10", features = ["test-utils"] }
vm-memory = { version = "0.13.1", features = ["backend-mmap", "backend-atomic"] }
