[package]
name = "vhost-device-gpu"
version = "0.1.0"
authors = ["Dorinda Bassey <dbassey@redhat.com>", "Matias Ezequiel Vara Larsen <mvaralar@redhat.com>"]
description = "A virtio-sound device using the vhost-user protocol."
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["gpu", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"
publish = false

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.4",  features = ["derive"] }
env_logger = "0.10"
libc = "0.2"
log = "0.4"
rutabaga_gfx = { path = "rutabaga_gfx", features = ["virgl_renderer"]}
thiserror = "1.0"
vhost = { path = "vendor/vhost", features = ["vhost-user-backend"] }
vhost-user-backend = {path = "vendor/vhost-user-backend"}
virtio-bindings = {path = "vendor/virtio-bindings"}
virtio-queue = {path = "vendor/virtio-queue"}
vm-memory = {path = "vendor/vm-memory"}
vmm-sys-util = {path = "vendor/vmm-sys-util"}
zerocopy = "0.6.3"
zerocopy-derive = "0.6.3"

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { path = "vendor/virtio-queue", features = ["test-utils"] }
vm-memory = { path = "vendor/vm-memory", features = ["backend-mmap", "backend-atomic"] }
