[package]
name = "vhost-device-gpu"
version = "0.0.1"
edition = "2021"


[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
epoll = "4.3"
libc = "0.2"
log = "0.4"
rand = "0.8.5"
tempfile = "3.9"
thiserror = "1.0"
vhost = { version = "0.10", features = ["vhost-user-backend"] }
vhost-user-backend = "0.13"
virtio-bindings = "0.2.2"
virtio-queue = "0.11"
vm-memory = "0.14.0"
vmm-sys-util = "0.12"
nix = { version = "0.27", features = ["ioctl"] }
crossbeam-channel = "0.5.11"
rutabaga_gfx = {path = "../rutabaga_gfx", features = ["virgl_renderer", "virgl_renderer_next"]}
zerocopy = { version = "0.6.6"}
zerocopy-derive = { version = "0.6.6"}

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { version = "0.11", features = ["test-utils"] }
vm-memory = { version = "0.14", features = ["backend-mmap", "backend-atomic"] }
